# Ai-Complaint-portal

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  AGENTS.md  Agents.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  User Manual  cliff.toml  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini
backend/: .env.example  Dockerfile  ai_classifier.py  database.py  main.py  models.py  requirements-ai.txt  requirements.txt  schemas.py
backend/routes/: complaints.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: ComplaintCard.jsx  Footer.jsx  Navbar.jsx  StatCard.jsx  StatisticsCards.jsx
frontend/src/pages/: AdminDashboard.jsx  ComplaintForm.jsx  Home.jsx  TrackComplaint.jsx
frontend/src/services/: api.js
tests/: conftest.py  test_ai_classifier.py  test_complaints_api.py
