[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-smart-complaint-portal"
version = "1.0.0"
description = "React and FastAPI civic grievance portal with AI-assisted complaint categorization, tracking, and admin management."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "AI Smart Complaint Portal Maintainers" },
]
keywords = ["fastapi", "react", "civic-tech", "complaints", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.36",
  "pydantic[email]==2.10.4",
  "python-multipart==0.0.27",
]

[project.optional-dependencies]
ai = [
  "transformers==4.47.1",
  "torch>=2.2.0",
]
dev = [
  "bandit[toml]==1.8.3",
  "detect-secrets==1.5.0",
  "httpx==0.28.1",
  "mypy==1.15.0",
  "pip-audit==2.7.3",
  "pre-commit==4.1.0",
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "ruff==0.9.6",
  "vulture==2.14",
  "pylint==3.3.4",
]

[project.urls]
Repository = "https://example.com/ai-smart-complaint-portal"
Changelog = "https://example.com/ai-smart-complaint-portal/-/tags"
Issues = "https://example.com/ai-smart-complaint-portal/-/issues"

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["backend", "tests"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "frontend",
]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "S",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "B008",
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
mypy_path = "backend"
files = ["backend", "tests"]
strict = true
warn_unreachable = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["models"]
disable_error_code = ["misc", "valid-type"]

[tool.bandit]
targets = ["backend"]
exclude_dirs = [".venv", "tests", "frontend"]
skips = ["B101"]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = [
  "tests/*",
  "backend/routes/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["backend"]

[tool.pylint.main]
py-version = "3.10"
ignore = ["frontend", ".venv"]

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.vulture]
paths = ["backend", "tests"]
min_confidence = 80
exclude = ["frontend", ".venv"]
